--- a/QuoteNanime/.env
+++ b/QuoteNanime/.env
@@ -1,1 +1,1 @@
-Authorization=MTEzNDA5MjI5Nzk1MzM0NTU1Ng--.MTcyMDAzMzQyNg--.292a3110fb48
+Authorization=OTcwNzA2OTcyMDg3MzEyNDE0.MTcyMDQzNjUzNQ--.bff394bbd
