--- a/QuoteNanime/package.json
+++ b/QuoteNanime/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "axios-rate-limit": "^1.4.0",
     "link-react": "^3.0.0",
     "lucide-react": "^0.400.0",
     "react": "^18.3.1",
